legacy/additional_testing/gcc_crash_stats/results/gcc540/save_st/pr34964.c-5.4.0-1.out.txt
pr34964.c:5:12: error: invalid initializer
 char x[] = 0;  
            ^
